2017-XX-XX  Lcferrum <lcferrum@yandex.com>
	
	* Release 1.2
	* Fixed:
	* Changed:
		- Updated to use new features from SnK 2.4
		- Config is now saved after every settings change
	* Added:
		- 'Restart as admin' menu option
		- 'Launch SnK shell' menu option
		- 'Restart' option to 'About' dialog
		- CustomOnHotkey and CustomOnHotkeyLongPress options to config
		- /s and /l command line switches (fire short or long press events immediately)
	* Removed:
	* Required SnK version: 2.4+

2017-08-31  Lcferrum <lcferrum@yandex.com>
	
	* Release 1.1
	* Changed:
		- Changed task naming scheme when scheduling task for current user (tasks created by version 1.0 can't be deleted by 1.1 - delete them manually via Task Scheduler)
	* Required SnK version: 2.3

2017-06-04  Lcferrum <lcferrum@yandex.com>
	
	* Release 1.0
	* Required SnK version: 2.3
	